--- a/test.ipynb
+++ b/test.ipynb
@@ -4,26 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. reference : https://lazyprogrammer.me/how-to-fine-tune-chatgpt-gpt-3-5-turbo-using-the-openai-api-in-python/\n",
-    "# 2. error reference : https://community.openai.com/t/after-several-hours-file-still-being-processed-and-is-not-ready-to-be-used-for-fine-tuning/345605\n"
+    "1. reference : https://lazyprogrammer.me/how-to-fine-tune-chatgpt-gpt-3-5-turbo-using-the-openai-api-in-python/\n",
+    "2. error reference : https://community.openai.com/t/after-several-hours-file-still-being-processed-and-is-not-ready-to-be-used-for-fine-tuning/345605"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import openai\n",
     "import os\n",
@@ -34,25 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<File file id=file-IUel3Dqem2JfowGyuRlvAR9Y at 0x17cc912be70> JSON: {\n",
+       "<File file id=file-XwpqjCXcxqroC4IVTUawgYKO at 0x17cc8ac93a0> JSON: {\n",
        "  \"object\": \"file\",\n",
-       "  \"id\": \"file-IUel3Dqem2JfowGyuRlvAR9Y\",\n",
+       "  \"id\": \"file-XwpqjCXcxqroC4IVTUawgYKO\",\n",
        "  \"purpose\": \"fine-tune\",\n",
        "  \"filename\": \"file\",\n",
        "  \"bytes\": 35572065,\n",
-       "  \"created_at\": 1693586442,\n",
+       "  \"created_at\": 1693588510,\n",
        "  \"status\": \"uploaded\",\n",
        "  \"status_details\": null\n",
        "}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,91 +49,125 @@
    "source": [
     "openai.api_key = os.getenv('OPENAI_API_KEY')\n",
     "openai.File.create(\n",
-    "  file=open('./Training_wan2.jsonl'),\n",
+    "  file=open('./Training_wan2.jsonl'), # test.jsonl로 대체 가능\n",
     "  purpose='fine-tune',\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<File file id=file-IUel3Dqem2JfowGyuRlvAR9Y at 0x17cc914d210> JSON: {\n",
+       "<File file id=file-XwpqjCXcxqroC4IVTUawgYKO at 0x17cc8ab7740> JSON: {\n",
        "  \"object\": \"file\",\n",
-       "  \"id\": \"file-IUel3Dqem2JfowGyuRlvAR9Y\",\n",
+       "  \"id\": \"file-XwpqjCXcxqroC4IVTUawgYKO\",\n",
        "  \"purpose\": \"fine-tune\",\n",
        "  \"filename\": \"file\",\n",
        "  \"bytes\": 35572065,\n",
-       "  \"created_at\": 1693586442,\n",
+       "  \"created_at\": 1693588510,\n",
        "  \"status\": \"uploaded\",\n",
        "  \"status_details\": null\n",
        "}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "openai.File.retrieve('file-IUel3Dqem2JfowGyuRlvAR9Y')"
+    "openai.File.retrieve('file-XwpqjCXcxqroC4IVTUawgYKO')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "ename": "InvalidRequestError",
-     "evalue": "File 'file-IUel3Dqem2JfowGyuRlvAR9Y' is still being processed and is not ready to be used for fine-tuning. Please try again later.",
+     "evalue": "File 'file-XwpqjCXcxqroC4IVTUawgYKO' is still being processed and is not ready to be used for fine-tuning. Please try again later.",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mInvalidRequestError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m openai\u001b[39m.\u001b[39;49mFineTuningJob\u001b[39m.\u001b[39;49mcreate(\n\u001b[0;32m      2\u001b[0m   training_file\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mfile-IUel3Dqem2JfowGyuRlvAR9Y\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      3\u001b[0m   model\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mgpt-3.5-turbo\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      4\u001b[0m )\n",
+      "Cell \u001b[1;32mIn[59], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m openai\u001b[39m.\u001b[39;49mFineTuningJob\u001b[39m.\u001b[39;49mcreate(\n\u001b[0;32m      2\u001b[0m   training_file\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mfile-XwpqjCXcxqroC4IVTUawgYKO\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      3\u001b[0m   model\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mgpt-3.5-turbo-0613\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      4\u001b[0m )\n",
       "File \u001b[1;32mc:\\Users\\LG\\anaconda3\\envs\\xsearch\\lib\\site-packages\\openai\\api_resources\\abstract\\createable_api_resource.py:57\u001b[0m, in \u001b[0;36mCreateableAPIResource.create\u001b[1;34m(cls, api_key, api_base, api_type, request_id, api_version, organization, **params)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[0;32m     39\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcreate\u001b[39m(\n\u001b[0;32m     40\u001b[0m     \u001b[39mcls\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     47\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams,\n\u001b[0;32m     48\u001b[0m ):\n\u001b[0;32m     49\u001b[0m     requestor, url \u001b[39m=\u001b[39m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m__prepare_create_requestor(\n\u001b[0;32m     50\u001b[0m         api_key,\n\u001b[0;32m     51\u001b[0m         api_base,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     54\u001b[0m         organization,\n\u001b[0;32m     55\u001b[0m     )\n\u001b[1;32m---> 57\u001b[0m     response, _, api_key \u001b[39m=\u001b[39m requestor\u001b[39m.\u001b[39;49mrequest(\n\u001b[0;32m     58\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mpost\u001b[39;49m\u001b[39m\"\u001b[39;49m, url, params, request_id\u001b[39m=\u001b[39;49mrequest_id\n\u001b[0;32m     59\u001b[0m     )\n\u001b[0;32m     61\u001b[0m     \u001b[39mreturn\u001b[39;00m util\u001b[39m.\u001b[39mconvert_to_openai_object(\n\u001b[0;32m     62\u001b[0m         response,\n\u001b[0;32m     63\u001b[0m         api_key,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     66\u001b[0m         plain_old_data\u001b[39m=\u001b[39m\u001b[39mcls\u001b[39m\u001b[39m.\u001b[39mplain_old_data,\n\u001b[0;32m     67\u001b[0m     )\n",
       "File \u001b[1;32mc:\\Users\\LG\\anaconda3\\envs\\xsearch\\lib\\site-packages\\openai\\api_requestor.py:298\u001b[0m, in \u001b[0;36mAPIRequestor.request\u001b[1;34m(self, method, url, params, headers, files, stream, request_id, request_timeout)\u001b[0m\n\u001b[0;32m    277\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrequest\u001b[39m(\n\u001b[0;32m    278\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[0;32m    279\u001b[0m     method,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    286\u001b[0m     request_timeout: Optional[Union[\u001b[39mfloat\u001b[39m, Tuple[\u001b[39mfloat\u001b[39m, \u001b[39mfloat\u001b[39m]]] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m    287\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tuple[Union[OpenAIResponse, Iterator[OpenAIResponse]], \u001b[39mbool\u001b[39m, \u001b[39mstr\u001b[39m]:\n\u001b[0;32m    288\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrequest_raw(\n\u001b[0;32m    289\u001b[0m         method\u001b[39m.\u001b[39mlower(),\n\u001b[0;32m    290\u001b[0m         url,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    296\u001b[0m         request_timeout\u001b[39m=\u001b[39mrequest_timeout,\n\u001b[0;32m    297\u001b[0m     )\n\u001b[1;32m--> 298\u001b[0m     resp, got_stream \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_interpret_response(result, stream)\n\u001b[0;32m    299\u001b[0m     \u001b[39mreturn\u001b[39;00m resp, got_stream, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapi_key\n",
       "File \u001b[1;32mc:\\Users\\LG\\anaconda3\\envs\\xsearch\\lib\\site-packages\\openai\\api_requestor.py:700\u001b[0m, in \u001b[0;36mAPIRequestor._interpret_response\u001b[1;34m(self, result, stream)\u001b[0m\n\u001b[0;32m    692\u001b[0m     \u001b[39mreturn\u001b[39;00m (\n\u001b[0;32m    693\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_interpret_response_line(\n\u001b[0;32m    694\u001b[0m             line, result\u001b[39m.\u001b[39mstatus_code, result\u001b[39m.\u001b[39mheaders, stream\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    695\u001b[0m         )\n\u001b[0;32m    696\u001b[0m         \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m parse_stream(result\u001b[39m.\u001b[39miter_lines())\n\u001b[0;32m    697\u001b[0m     ), \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    698\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    699\u001b[0m     \u001b[39mreturn\u001b[39;00m (\n\u001b[1;32m--> 700\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_interpret_response_line(\n\u001b[0;32m    701\u001b[0m             result\u001b[39m.\u001b[39;49mcontent\u001b[39m.\u001b[39;49mdecode(\u001b[39m\"\u001b[39;49m\u001b[39mutf-8\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[0;32m    702\u001b[0m             result\u001b[39m.\u001b[39;49mstatus_code,\n\u001b[0;32m    703\u001b[0m             result\u001b[39m.\u001b[39;49mheaders,\n\u001b[0;32m    704\u001b[0m             stream\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[0;32m    705\u001b[0m         ),\n\u001b[0;32m    706\u001b[0m         \u001b[39mFalse\u001b[39;00m,\n\u001b[0;32m    707\u001b[0m     )\n",
       "File \u001b[1;32mc:\\Users\\LG\\anaconda3\\envs\\xsearch\\lib\\site-packages\\openai\\api_requestor.py:765\u001b[0m, in \u001b[0;36mAPIRequestor._interpret_response_line\u001b[1;34m(self, rbody, rcode, rheaders, stream)\u001b[0m\n\u001b[0;32m    763\u001b[0m stream_error \u001b[39m=\u001b[39m stream \u001b[39mand\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39merror\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m resp\u001b[39m.\u001b[39mdata\n\u001b[0;32m    764\u001b[0m \u001b[39mif\u001b[39;00m stream_error \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39m200\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m rcode \u001b[39m<\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[1;32m--> 765\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandle_error_response(\n\u001b[0;32m    766\u001b[0m         rbody, rcode, resp\u001b[39m.\u001b[39mdata, rheaders, stream_error\u001b[39m=\u001b[39mstream_error\n\u001b[0;32m    767\u001b[0m     )\n\u001b[0;32m    768\u001b[0m \u001b[39mreturn\u001b[39;00m resp\n",
-      "\u001b[1;31mInvalidRequestError\u001b[0m: File 'file-IUel3Dqem2JfowGyuRlvAR9Y' is still being processed and is not ready to be used for fine-tuning. Please try again later."
+      "\u001b[1;31mInvalidRequestError\u001b[0m: File 'file-XwpqjCXcxqroC4IVTUawgYKO' is still being processed and is not ready to be used for fine-tuning. Please try again later."
      ]
     }
    ],
    "source": [
     "openai.FineTuningJob.create(\n",
-    "  training_file='file-IUel3Dqem2JfowGyuRlvAR9Y',\n",
-    "  model='gpt-3.5-turbo',\n",
-    ")"
+    "  training_file='file-XwpqjCXcxqroC4IVTUawgYKO',\n",
+    "  model='gpt-3.5-turbo-0613',\n",
+    ") # 전체 json 데이터는 에러 발생, test.jsonl 데이터 사용시 에러 해결"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<FineTuningJob fine_tuning.job id=ftjob-lpPBMNqtJY2j0ykYtj9t9cG7 at 0x17cc90f3e20> JSON: {\n",
+       "  \"object\": \"fine_tuning.job\",\n",
+       "  \"id\": \"ftjob-lpPBMNqtJY2j0ykYtj9t9cG7\",\n",
+       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
+       "  \"created_at\": 1693587369,\n",
+       "  \"finished_at\": null,\n",
+       "  \"fine_tuned_model\": null,\n",
+       "  \"organization_id\": \"org-eE0UPo3nJvrv2FYqMgyihX8O\",\n",
+       "  \"result_files\": [],\n",
+       "  \"status\": \"running\",\n",
+       "  \"validation_file\": null,\n",
+       "  \"training_file\": \"file-mJWGYQHj3xUL6fUpvt5bbYQu\",\n",
+       "  \"hyperparameters\": {\n",
+       "    \"n_epochs\": 5\n",
+       "  },\n",
+       "  \"trained_tokens\": null\n",
+       "}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "openai.FineTuningJob.retrieve('ftjob-xxxxxxxx')"
+    "openai.FineTuningJob.retrieve('ftjob-lpPBMNqtJY2j0ykYtj9t9cG7')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "무슨 일이 있으신가요? 같이 이야기 해보면서 해결책을 찾을 수 있을지도 몰라요.\n"
+     ]
+    }
+   ],
    "source": [
     "completion = openai.ChatCompletion.create(\n",
-    "  model='ft:gpt-3.5-turbo-xxxx:<your_username>::<some_id>', # Your Model Id\n",
+    "  model='ft:gpt-3.5-turbo-0613:personal::7u1sM1oU', # Your Model Id\n",
     "  messages=[\n",
-    "    {\"role\": \"system\", \"content\": \"You are Zordon, leader of the Power Rangers.\"},\n",
-    "    {\"role\" \"user\", \"content\": \"Zordon, the Red Ranger has been captured! What do we do?\"}\n",
+    "    {\"role\": \"user\", \"content\": \"하.. 너무 힘들다..\"}\n",
     "  ]\n",
     ")\n",
-    "print(completion.choices[0].message)"
+    "print(completion.choices[0].message['content'])\n"
    ]
   }
  ],
